// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`study-materials API upsert creates an entry for a subject with no local record: response 1`] = `
{
  "data": {
    "meaning_note": "Chi + kara = power",
  },
  "ok": true,
}
`;

exports[`study-materials API upsert creates an entry for a subject with no local record: file 1`] = `
{
  "1": {
    "meaning_note": "One flat line on the ground",
    "meaning_synonyms": [
      "flat ground",
    ],
  },
  "2478": {
    "meaning_synonyms": [
      "american",
    ],
  },
  "2484": {
    "meaning_note": "Chi + kara = power",
  },
  "3766": {
    "meaning_note": "Every evening, the same routine",
    "meaning_synonyms": [
      "nightly",
    ],
  },
  "456": {
    "reading_note": "Kawa like a river bank",
  },
  "658": {
    "reading_note": "Kou sounds like a school bell",
  },
  "958": {
    "meaning_note": "Evening comes after the sun goes down",
    "reading_note": "Ban like a night ban",
  },
}
`;

exports[`study-materials API upsert updates one field and keeps the others: response 1`] = `
{
  "data": {
    "meaning_note": "Evening comes after the sun goes down",
    "reading_note": "Ban, the night curfew",
  },
  "ok": true,
}
`;

exports[`study-materials API upsert updates one field and keeps the others: file 1`] = `
{
  "1": {
    "meaning_note": "One flat line on the ground",
    "meaning_synonyms": [
      "flat ground",
    ],
  },
  "2478": {
    "meaning_synonyms": [
      "american",
    ],
  },
  "3766": {
    "meaning_note": "Every evening, the same routine",
    "meaning_synonyms": [
      "nightly",
    ],
  },
  "456": {
    "reading_note": "Kawa like a river bank",
  },
  "658": {
    "reading_note": "Kou sounds like a school bell",
  },
  "958": {
    "meaning_note": "Evening comes after the sun goes down",
    "reading_note": "Ban, the night curfew",
  },
}
`;

exports[`study-materials API upsert adds a synonym next to the WaniKani one: response 1`] = `
{
  "data": {
    "meaning_synonyms": [
      "american",
      "yank",
    ],
  },
  "ok": true,
}
`;

exports[`study-materials API upsert adds a synonym next to the WaniKani one: file 1`] = `
{
  "1": {
    "meaning_note": "One flat line on the ground",
    "meaning_synonyms": [
      "flat ground",
    ],
  },
  "2478": {
    "meaning_synonyms": [
      "american",
      "yank",
    ],
  },
  "3766": {
    "meaning_note": "Every evening, the same routine",
    "meaning_synonyms": [
      "nightly",
    ],
  },
  "456": {
    "reading_note": "Kawa like a river bank",
  },
  "658": {
    "reading_note": "Kou sounds like a school bell",
  },
  "958": {
    "meaning_note": "Evening comes after the sun goes down",
    "reading_note": "Ban like a night ban",
  },
}
`;

exports[`study-materials API upsert an empty string clears one note: response 1`] = `
{
  "data": {
    "reading_note": "Ban like a night ban",
  },
  "ok": true,
}
`;

exports[`study-materials API upsert an empty string clears one note: file 1`] = `
{
  "1": {
    "meaning_note": "One flat line on the ground",
    "meaning_synonyms": [
      "flat ground",
    ],
  },
  "2478": {
    "meaning_synonyms": [
      "american",
    ],
  },
  "3766": {
    "meaning_note": "Every evening, the same routine",
    "meaning_synonyms": [
      "nightly",
    ],
  },
  "456": {
    "reading_note": "Kawa like a river bank",
  },
  "658": {
    "reading_note": "Kou sounds like a school bell",
  },
  "958": {
    "reading_note": "Ban like a night ban",
  },
}
`;

exports[`study-materials API upsert clearing the last field removes the entry: file 1`] = `
{
  "1": {
    "meaning_note": "One flat line on the ground",
    "meaning_synonyms": [
      "flat ground",
    ],
  },
  "2478": {
    "meaning_synonyms": [
      "american",
    ],
  },
  "3766": {
    "meaning_note": "Every evening, the same routine",
    "meaning_synonyms": [
      "nightly",
    ],
  },
  "658": {
    "reading_note": "Kou sounds like a school bell",
  },
  "958": {
    "meaning_note": "Evening comes after the sun goes down",
    "reading_note": "Ban like a night ban",
  },
}
`;
